@@ -3,11 +3,14 @@ TODO:
 	show MIDI length in seconds.
 	TextTrackWriter
 	FingeringNavigator
+		wrist crowd punish
 		extend & squeeze costs
 
 
 
 2017.9.25	K.L.	<k.l.lambda@gmail.com>
+
+	+	Pianist/FingeringNavigator: black key short cost added.
 
 	>	Pianist/FingeringNavigator: fixed finger states.
 
